<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    tools:context=".Splash"
    android:orientation="vertical"
    android:padding="20dp" >

    <LinearLayout
        android:id="@+id/LinSplahsh1"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/SantSplash"
            android:textSize="35sp"
            android:textStyle="bold"
            android:textColor="@color/Gray1" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/Sant"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/Black"
            android:gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinSplahsh2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:gravity="center"
        android:weightSum="5" >

        <ImageView
            android:id="@+id/splash_logo1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="2" />

        <ImageView
            android:id="@+id/splash_logo"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:src="@drawable/mainlogo" />

        <ImageView
            android:id="@+id/splash_logo2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="2" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinSplahsh3"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="bottom|center_vertical"
        android:paddingBottom="10dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/Farzanegan1"
            android:textColor="@color/Black"
            android:textSize="13sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/Farzanegan"
            android:textColor="@color/RedLoginForm"
            android:textSize="15sp"
            android:textStyle="bold" 
            android:gravity="center"/>
    </LinearLayout>

</LinearLayout>