<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/White">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/White"
            android:orientation="vertical" >

            <include
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                layout="@layout/action_bar" />

            <include
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                layout="@layout/darkhast_info" />


            <LinearLayout
                android:background="@color/White"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:padding="10dp" >

                <LinearLayout
                    android:background="@color/White"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical"
                    android:padding="10dp"
                    android:weightSum="8" >

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:background="@color/White"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:padding="1dp"
                        android:weightSum="5" >

                        <TextView
                            android:background="@android:drawable/editbox_background_normal"
                            style="@style/FillDarkhastInfo"
                            android:layout_width="0dp"
                            android:layout_height="fill_parent"
                            android:layout_weight="4"
                            android:text="@string/GhabeleAnjaam" />

                        <ImageView
                            android:src="@drawable/empty"
                            android:id="@+id/imgGhabeleAnjam"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                             />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:background="@color/White"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:padding="1dp"
                        android:weightSum="5" >

                        <TextView
                            android:background="@android:drawable/editbox_background_normal"
                            style="@style/FillDarkhastInfo"
                            android:layout_width="0dp"
                            android:layout_height="fill_parent"
                            android:layout_weight="4"
                            android:text="@string/PayaneKar" />

                        <ImageView
                            android:src="@drawable/empty"
                            android:id="@+id/imgPayaneKar"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                             />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/llNiazBeGhete"
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:background="@color/White"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:padding="1dp"
                        android:weightSum="5" >

                        <TextView
                            android:background="@android:drawable/editbox_background_normal"
                            style="@style/FillDarkhastInfo"
                            android:layout_width="0dp"
                            android:layout_height="fill_parent"
                            android:layout_weight="4"
                            android:text="@string/Need" />

                        <ImageView
                            android:src="@drawable/empty"
                            android:id="@+id/imgNeed"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                             />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:layout_weight="4"
                        android:background="@color/White"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="1dp" >

                        <TextView
                            style="@style/FillDarkhastInfo"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1.25"
                            android:text="@string/SharheEghdam" />

                        <EditText
                            android:background="@android:drawable/editbox_background_normal"
                            android:id="@+id/txtSharheEghdamForward"
                            android:layout_gravity="center_horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="5.17"
                            />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:background="@color/White"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:padding="1dp" >

                        <Button
                            android:background="@drawable/button_round"
                            android:id="@+id/BtnResponseSabt"
                            style="@style/button_sabt"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/Sabt" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <include layout="@layout/navigashon_menu" />

</android.support.v4.widget.DrawerLayout>