<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sant.farzanegan.sant.MainActivity">



    <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                            android:id="@+id/drawer_layout"
                                            android:layout_width="match_parent"
                                            android:layout_height="match_parent" >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/abc_background_cache_hint_selector_material_light">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/abc_primary_text_material_dark"
                android:orientation="vertical" >

                <include
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    layout="@layout/action_bar" />

                <include
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    layout="@layout/darkhast_info" />


                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="@color/abc_background_cache_hint_selector_material_light"
                    android:orientation="vertical"
                    android:padding="10dp" >

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:background="@color/abc_background_cache_hint_selector_material_light"
                        android:orientation="vertical"
                        android:padding="10dp"
                        android:weightSum="8" >

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:background="@color/White"
                            android:gravity="center"
                            android:orientation="horizontal"
                            android:padding="1dp"
                            android:weightSum="5" >

                            <TextView
                                style="@style/FillDarkhastInfo"
                                android:layout_width="0dp"
                                android:layout_height="fill_parent"
                                android:layout_weight="4"
                                android:background="@android:drawable/editbox_background_normal"
                                android:text="@string/GhabeleAnjaam" />

                            <ImageView
                                android:id="@+id/imgGhabeleAnjam"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:src="@drawable/empty" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:background="@color/White"
                            android:gravity="center"
                            android:orientation="horizontal"
                            android:padding="1dp"
                            android:weightSum="5" >

                            <TextView
                                style="@style/FillDarkhastInfo"
                                android:layout_width="0dp"
                                android:layout_height="fill_parent"
                                android:layout_weight="4"
                                android:background="@android:drawable/editbox_background_normal"
                                android:text="@string/PayaneKar" />

                            <ImageView
                                android:id="@+id/imgPayaneKar"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:src="@drawable/empty" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/llNiazBeGhete"
                            android:layout_width="fill_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:background="@color/White"
                            android:gravity="center"
                            android:orientation="horizontal"
                            android:padding="1dp"
                            android:weightSum="5" >

                            <TextView
                                style="@style/FillDarkhastInfo"
                                android:layout_width="0dp"
                                android:layout_height="fill_parent"
                                android:layout_weight="4"
                                android:background="@android:drawable/editbox_background_normal"
                                android:text="@string/Need" />

                            <ImageView
                                android:id="@+id/imgNeed"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:src="@drawable/empty" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="0dp"
                            android:layout_weight="4"
                            android:background="@color/White"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="1dp" >

                            <TextView
                                style="@style/FillDarkhastInfo"
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1.25"
                                android:text="@string/SharheEghdam" />

                            <EditText
                                android:id="@+id/txtSharheEghdamForward"
                                android:layout_gravity="center_horizontal"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="5.17"
                                android:background="@android:drawable/editbox_background_normal"
                                />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:background="@color/White"
                            android:gravity="center"
                            android:orientation="horizontal"
                            android:padding="1dp" >

                            <Button
                                android:id="@+id/BtnResponseSabt"
                                style="@style/button_sabt"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@drawable/button_round"
                                android:text="@string/Sabt" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <include layout="@layout/navigashon_menu" />

    </android.support.v4.widget.DrawerLayout>



</RelativeLayout>
